# NYC-re-tracker

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json  settings.local.json.example
.claude/commands/: assess.md  cleanup.md  do.md  doctor.md  figma.md  fly.md  neon.md  pr.md  promptvault.md  sentry.md  setup.md  supabase.md  ticket.md  vercel.md
.claude/hooks/: linear-start-ticket.sh  linear-update-on-commit.sh
.cursor/rules/: ci-debug-read-first.mdc  no-protected-files.mdc
.github/: COMMIT_CONVENTION.md  PULL_REQUEST_TEMPLATE.md  ci-test.txt  dependabot.yml
.streamlit/: config.toml  secrets.toml.example
.vibe/: config.json  grandfathered_tickets.md  integration-freshness.schema.json  local_state.json.template  secrets.allowlist.json
agent_instructions/: COMMANDS.md  CORE.md  WORKFLOW.md
app/: db.py  main.py  sidebar.py
app/pages/: 2_Map.py  (+12 more)
data/: backfill_bbl.py  backfill_geocoding.py  backfill_listings_bbl.py  build_training_dataset.py  download_pluto.py  engineer_features.py  enrich_last_sale.py  enrich_lien_amount.py  enrich_market_value.py  enrich_mortgages.py  enrich_pluto.py  enrich_walk_score.py  ingest_311_complaints.py  ingest_dof_sales.py  ingest_hpd_registration.py  ingest_lien_history.py  ingest_listings.py  ingest_nyc_open_data.py  ingest_tax_bills.py  ingest_violations.py  schema.sql  score_listings.py  train_avm.py  train_avm_building.py  train_avm_unit.py
lib/: __init__.py
links/: tools.md
utils/: config.py  quota.py  supabase_client.py
(+126 files in other folders)
